Wed May 23    + a. Flavor Radii, Borders    + b. Roast Flavor messaging    + c. Backround colors

--- a/less/layout.less
+++ b/less/layout.less
@@ -3,8 +3,8 @@
 @import "mixin.less";
 @import "gradient.less";
 
-@layout-dark:@color-gray10; @layout-lite:@color-gray20; @layout-view:@color-back80;
-@layout-stat:@color-gray10; @layout-norm:@color-gray35;
+@layout-dark:@color-back10; @layout-lite:@color-back20; @layout-view:@color-back80;
+@layout-stat:@color-back10; @layout-norm:@color-back35;
 
 .layout-font{ font-family:Roberto, sans-serif; color:wheat; }
 
