--- a/less/ui.less
+++ b/less/ui.less
@@ -5,15 +5,17 @@ html { overflow:hidden; }
 
 .ui-font{ font-family:Roberto, sans-serif; }
 
-@ui-back15:@color-gray20;
-@ui-back20:@color-gray30;
-@ui-back40:@color-gray40;
-@ui-back50:@color-gray50;
+@ui-back-view:@color-back30;
+@ui-back-pack:@color-back35;
+@ui-back-pane:@color-back40;
+@ui-back-circle:@color-back30;
+@ui-back-action:@color-back30;
+@ui-black: @color-black;
 
 
-.ui-view { width:100%; height:100%; background-color:@ui-back15; }
-.ui-pack { background-color:@ui-back20; position:absolute; z-index:1; .mixin-round(24px); }
-.ui-pane { background-color:@ui-back20; position:absolute; z-index:2; overflow:visible; .mixin-round(24px); }
+.ui-view { background-color:@ui-back-view; width:100%; height:100%; }
+.ui-pack { background-color:@ui-back-pack; position:absolute; z-index:1; .mixin-round(24px); }
+.ui-pane { background-color:@ui-back-pane; position:absolute; z-index:2; overflow:visible; .mixin-round(24px); }
 
 .ui-pane-center       { position:absolute;  left:15%; top:15%; width:70%; height:70%; z-index:3; display:table; }
 .ui-pane-table        { position:absolute;  left: 5%; top: 5%; width:90%; height:90%; }
@@ -27,15 +29,15 @@ html { overflow:hidden; }
 
 .ui-pane .panel  { font-family:Roboto, sans-serif; z-index:2; }
 .ui-pane .image  { font-size:2vmin; color:white;   z-index:1;       }
-.ui-pane .label  { font-size:3vmin; color:white; font-weight:bold;  }
+.ui-pane .label  { font-size:3vmin; color:black; font-weight:bold;  }
 .ui-pane .texts  { font-size:2vmin; color:white; line-height:2vmin; }
-.ui-pane .branch { font-size:2vmin; color:white; line-height:3vmin; }
+.ui-pane .branch { font-size:2vmin; color:black; line-height:3vmin; }
 
-.ui-pane .circle { background-color:@ui-back15; color:white; font-weight:bold;  }
-.ui-pane .roast  { font-size:2vmin; color:white; z-index:2; } //  border:black solid 4px;
+.ui-pane .circle { background-color:@ui-back-circle; color:black; font-weight:bold;  }
+.ui-pane .roast  { font-size:2vmin; color:black; z-index:2; } //  border:black solid 4px;
 .ui-pane .roast:hover  { color:wheat; }
 
-.ui-pane .action         { color:white;  background-color:@ui-back15; font-weight:bold;  }
+.ui-pane .action         { color:white;  background-color:@ui-back-action; font-weight:bold;  }
 .ui-pane .action:hover   { color:wheat; }
 .ui-pane .action:active,
 .ui-pane .action-active  { color:yellow; background-color:@ui-black;  }
