Fri June 1   Release Candidate 1   Interact Highlighting onSelect and Pane mouseenter   Region onChoice Removed   Gray Scale Thems

--- a/less/ui.less
+++ b/less/ui.less
@@ -5,12 +5,12 @@ html { overflow:hidden; }
 
 .ui-font{ font-family:Roberto, sans-serif; }
 
-@ui-back-dark:@color-back20;
-@ui-back-view:@color-back30;
-@ui-back-pack:@color-back35;
-@ui-back-pane:@color-back40;
-@ui-back-circle:@color-back30;
-@ui-back-action:@color-back30;
+@ui-back-dark:@color-gray20;
+@ui-back-view:@color-gray30;
+@ui-back-pack:@color-gray35;
+@ui-back-pane:@color-gray40;
+@ui-back-circle:@color-gray30;
+@ui-back-action:@color-gray30;
 
 @ui-black: @color-black;
 
