--- a/less/jitter.less
+++ b/less/jitter.less
@@ -1,6 +1,7 @@
 
-@color-hue:20;  @color-sat:40%;  @color-lit:90%; @color-inc:12%;
-@layout-west:0; @layout-north:0; @layout-east:0; @layout-south:0;  @layout-gap:0;
+// @color-hue:20;  @color-sat:40%;  @color-lit:90%; @color-inc:12%; // Chocolate Theme
+   @color-hue: 0;  @color-sat:0;    @color-lit:90%; @color-inc:12%; // Gray Theme - Not Really Working
+   @layout-west:0; @layout-north:0; @layout-east:0; @layout-south:0;  @layout-gap:0;
 
 @import "layout.less";
 @import "btn.less";
