--- a/public/css/jitter.css
+++ b/public/css/jitter.css
@@ -122,7 +122,7 @@
   top: 0;
   right: 0;
   bottom: 0;
-  background-image: radial-gradient(ellipse farthest-corner at center center, #dac7be, #333333);
+  background-image: radial-gradient(ellipse farthest-corner at center center, #dabebe, #333333);
   overflow: visible;
 }
 .layout-side {
@@ -225,8 +225,8 @@
   cursor: pointer;
   border-radius: 1.7vmin;
   border: 1px solid black;
-  background: #815d4b;
-  box-shadow: 1vmin 1vmin 0 0 #614638;
+  background: #814b4b;
+  box-shadow: 1vmin 1vmin 0 0 #613838;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -270,18 +270,18 @@ html {
   font-family: Roberto, sans-serif;
 }
 .ui-view {
-  background-color: #614638;
+  background-color: #4d4d4d;
   width: 100%;
   height: 100%;
 }
 .ui-pack {
-  background-color: #715141;
+  background-color: #595959;
   position: absolute;
   z-index: 1;
   border-radius: 24px;
 }
 .ui-pane {
-  background-color: #815d4b;
+  background-color: #666666;
   position: absolute;
   z-index: 2;
   overflow: visible;
@@ -361,10 +361,10 @@ html {
   line-height: 3vmin;
 }
 .ui-pane .arrow {
-  color: #412e25;
+  color: #333333;
 }
 .ui-pane .circle {
-  background-color: #614638;
+  background-color: #4d4d4d;
   color: black;
   font-weight: bold;
 }
@@ -378,7 +378,7 @@ html {
 }
 .ui-pane .action {
   color: white;
-  background-color: #614638;
+  background-color: #4d4d4d;
   font-weight: bold;
 }
 .ui-pane .action-inpane {
