--- a/less/ui.less
+++ b/less/ui.less
@@ -5,13 +5,11 @@ html { overflow:hidden; }
 
 .ui-font{ font-family:Roberto, sans-serif; }
 
-@ui-back-dark:@color-gray20;
-@ui-back-view:@color-gray30;
-@ui-back-pack:@color-gray35;
-@ui-back-pane:@color-gray40;
-@ui-back-circle:@color-gray30;
-@ui-back-action:@color-gray30;
-
+@ui-back-view:@color-back30;
+@ui-back-pack:@color-back35;
+@ui-back-pane:@color-back40;
+@ui-back-circle:@color-back30;
+@ui-back-action:@color-back30;
 @ui-black: @color-black;
 
 
@@ -34,16 +32,15 @@ html { overflow:hidden; }
 .ui-pane .label  { font-size:3vmin; color:black; font-weight:bold;  }
 .ui-pane .texts  { font-size:2vmin; color:white; line-height:2vmin; }
 .ui-pane .branch { font-size:2vmin; color:black; line-height:3vmin; }
-.ui-pane .arrow  { color:@ui-back-dark; }
 
 .ui-pane .circle { background-color:@ui-back-circle; color:black; font-weight:bold;  }
 .ui-pane .roast  { font-size:2vmin; color:black; z-index:2; } //  border:black solid 4px;
 .ui-pane .roast:hover  { color:wheat; }
 
-.ui-pane .action         { color:white;  background-color:@ui-back-action; font-weight:bold; }
-.ui-pane .action-inpane  { color:yellow; background-color:black;           font-weight:bold; }
-.ui-pane .action-active  { color:yellow; background-color:black;           font-weight:bold; }
+.ui-pane .action         { color:white;  background-color:@ui-back-action; font-weight:bold;  }
 .ui-pane .action:hover   { color:wheat; }
+.ui-pane .action:active,
+.ui-pane .action-active  { color:yellow; background-color:@ui-black;  }
 
 .ui-pane .txt    { font-size:2vmin; color:white; }
 .ui-pane .img    {}
