Sun Mar 10   Big Muse copy of Jitter file

--- a/less/fontawesome/_mixins.less
+++ b/less/fontawesome/_mixins.less
@@ -12,15 +12,9 @@
   vertical-align: -.125em;
 }
 
-.fa-icon-rotate(@degrees, @rotation) {
-  -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=@{rotation})";
-  transform: rotate(@degrees);
-}
+.fa-icon-rotate(@degrees, @rotation) { transform: rotate(@degrees); }
 
-.fa-icon-flip(@horiz, @vert, @rotation) {
-  -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=@{rotation}, mirror=1)";
-  transform: scale(@horiz, @vert);
-}
+.fa-icon-flip(@horiz, @vert, @rotation) {transform: scale(@horiz, @vert); }
 
 
 // Only display content to screen readers. A la Bootstrap 4.
